feat: add Kafka messaging adapter with tests
- Implemented KafkaPublisherAdapter and KafkaConsumerAdapter for publishing and consuming messages.
- Created KafkaAdapterTest to validate message publishing and consumption, including support for partition keys and batch publishing.
- Added necessary classes for message handling: MessageEnvelope, MessageHeaders, MessageId, ConsumerGroup, and TopicName.
- Updated MessageConsumerPort and MessagePublisherPort interfaces to support new messaging functionalities.
- Enhanced existing ArchUnit rules for better code structure validation.